--- a/src/app/components/TodoList/index.css
+++ b/src/app/components/TodoList/index.css
@@ -1,3 +1,28 @@
+p {
+    margin: 0;
+}
+
 .wrapper {
     padding: 10px 50px;
+}
+
+.wrapper>ul {
+    padding-inline-start: 0;
+    border: 1px solid #dddddd;
+    border-radius: 10px;
+    width: 30%;
+}
+
+.wrapper>ul>li{
+    display: flex;
+    padding: 10px 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+.wrapper>ul>li:last-child {
+    border-bottom: none;
+}
+
+.wrapper>ul>li .index {
+    padding-right: 10px;
 }
