--- a/src/app/components/TodoList/index.css
+++ b/src/app/components/TodoList/index.css
@@ -26,3 +26,34 @@ p {
 .wrapper>ul>li .index {
     padding-right: 10px;
 }
+
+.wrapper .inline-input {
+    display: flex;
+    width: 30%;
+    justify-content: space-between;
+    height: 30px;
+}
+
+.wrapper .inline-input>input {
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    flex-grow: 1;
+    height: 100%;
+    padding: 0;
+}
+
+.wrapper .inline-input>input:focus {
+    outline: none;
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+.wrapper .inline-input .btn {
+    background: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    margin-left: 10px;
+    width: 50px;
+    height: 100%;
+    cursor: pointer;
+}
